	* Add is_jug_running() function
	* Fix bug in finding config files
	* Improved --debug mode: check for unsupported recursive task creation
	* Add invalidate() to shell environment
	* Use ~/.config/jug/jugrc as configuration file
	* Add experimental support for extensible commands, use
	~/.config/jug/jug_user_commands.py
	* jugrc: execute_wait_cycle_time_secs is now execute_wait_cycle_time

version 1.4.0 Tue Jan 3 2017 by luispedro
	* Fix bug with writing very large objects to disk
	* Smarter handling of --aggressive-unload (do not unload what will be
	immediately necessary)
	* Work around corner case in `jug shell` command
	* Add test-jug subcommand
	* Add return_tuple decorator

version 1.3.0 Tue Nov 1 2016 by luispedro
	* Update `shell` subcommand to IPython 5
	* Use ~/.config/jugrc as configuration file
	* Cleanup usage string
	* Use `bottle` instead of `web.py` for webstatus subcommand
	* Add `jug_execute` function
	* Add timing functionality

version 1.2.2 Sat Jun 25 2016 by luispedro
	* Fix bugs in shell subcommand and a few corner cases in encoding/decoding
	results

version 1.2.1 Mon Feb 15 2016 by luispedro
	* Changed execution loop to ensure that all tasks are checked (issue #33
	on github)
	* Fixed bug that made 'check' or 'sleep-until' slower than necessary
	* Fixed jug on Windows (which does not support fsync on directories)
	* Made Tasklets use slightly less memory

version 1.2 Wed Aug 19 2015 by luispedro
	* Use HIGHEST_PROTOCOL when pickle()ing
	* Add compress_numpy option to file_store
	* Add register_hook_once function
	* Optimize case when most (or all) tasks are already run
	* Add --short option to 'jug status' and 'jug execute'
	* Fix bug with dictionary order in kwargs (fix by Andreas Sorge)
	* Fix ipython colors (fix by Andreas Sorge)
	* Sort tasks in 'jug status'

version 1.1 Tue Mar 03 2015 by luispedro
	* Python 3 compatibility fixes
	* fsync(directory) in file backend